--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
             margin-right: -8px;
             margin-top: 9px;
             background-repeat: no-repeat;
-            background-image: url('images/home_banner.jpg');
+            background-image: url('../static/images/home_banner.jpg');
             background-size: 100% 100%;
             background-color: rgba(255, 255, 255, 0.1);
             background-blend-mode: overlay;
@@ -189,7 +189,7 @@
     <table style=" margin-top: 15px; margin-left: auto; margin-right: auto; width: 70%; height: 100%; margin-top: 50px; ">
         <tr>
             <td valign="middle">
-                <img class="box_image" src="images/software_development.jpg"/>
+                <img class="box_image" src="../static/images/software_development.jpg"/>
             </td>
             <td valign="middle" style=" padding-left: 20px; padding-top: 30px; padding-bottom: 30px; ">
                 <h5 style=" font-size: 40px; margin-bottom: 10px; margin-top: 5px; ">About us</h5>
