--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>CodeTask</title>
 
+    <link rel="stylesheet" th:href="@{/css/application.css}" href="../static/css/application.css"/>
+
     <style>
-        body{
-            font-family: 'Linotype Didot', Serif;
-            background-color: #333333;
-        }
-
-        a {
-            color: rgb(255, 255, 255);
-        }
-
-        .icon {
-            margin-left: 7px;
-        }
-
         #banner {
             text-align: center;
             margin-left: -8px;
             margin-right: -8px;
             margin-top: 9px;
             background-repeat: no-repeat;
-            background-image: url('../static/images/home_banner.jpg');
+            background-image: url('/images/home_banner.jpg');
             background-size: 100% 100%;
             background-color: rgba(255, 255, 255, 0.1);
             background-blend-mode: overlay;
@@ -71,18 +60,15 @@
             transition-duration: .1s;
         }
 
+        #create_task:hover {
+            box-shadow: rgba(255, 53, 0, 0.5) 0 1px 30px;
+            transition-duration: .1s;
+        }
+
         @media (min-width: 768px) {
             .hire_now {
                 padding: 0 2.6rem;
             }
-        }
-
-        #navbar-top {
-            height: 80px;
-            margin: -8px;
-            color: rgb(255, 255, 255);
-            background-color: rgb(255, 69, 0);
-            display: block;
         }
 
         #about_us {
@@ -100,55 +86,6 @@
             border: 1px solid black;
         }
 
-        #contact_us {
-            color: rgb(255, 255, 255);
-            background-color: rgb(255, 89, 20);
-            height: 300px;
-            margin: 50px -8px 0px -8px;
-            padding-top: 5px;
-        }
-
-        .contact_td {
-            width: 50%;
-            height: 50%;
-        }
-
-        input, textarea {
-            color: rgb(255, 255, 255);
-            background-color: rgb(255, 69, 0);
-            font: inherit;
-            padding: 0.5rem 0.75rem;
-            font-size: 1rem;
-            margin: 0 auto;
-            border-radius: 0.05rem;
-            border: none;
-            width: 90%;
-            display: block;
-            border-bottom: 0.3rem solid transparent;
-            transition: all 0.3s;
-        }
-
-        #contact_button {
-            height: 40px;
-            width: 80px;
-            border-radius: 8px;
-            color: rgb(0, 0, 0);
-            background-color: rgb(0, 206, 209);
-            cursor: pointer;
-            border: none;
-            outline:none;
-        }
-
-        #footer {
-            text-align: center;
-            color: rgb(255, 255, 255);
-            background-color: rgb(255, 69, 0);
-            height: 125px;
-            overflow: hidden;
-            margin: 0px -8px -100px -8px;
-            vertical-align: middle;
-        }
-
     </style>
 
 </head>
@@ -162,12 +99,12 @@
             <a class="icon" href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a>
         </div>
     </div>
-    <div style=" text-align: center; margin-top: -75px; "><a href="index.html" style=" text-decoration: none; "><h2 style=" font-size: 40px; ">CodeTask</h2></a></div>
+    <div style=" text-align: center; margin-top: -75px; "><a th:href="@{/index}" href="index.html" style=" text-decoration: none; cursor: pointer; "><h2 style=" font-size: 40px; ">CodeTask</h2></a></div>
     <div style=" text-align: right;  margin-top: -65px; margin-right: 18px">
         <span style=" font-size: 21px;">
-            <a href="index.html" style=" text-decoration: underline; ">LogIn</a>
+            <a th:href="@{/index}" href="index.html" style=" text-decoration: underline; ">LogIn</a>
             /
-            <a href="index.html" style=" text-decoration: underline; ">SignUp</a>
+            <a th:href="@{/index}" href="index.html" style=" text-decoration: underline; ">SignUp</a>
         </span>
     </div>
 </div>
@@ -179,7 +116,12 @@
            <td class="banner_td"></td>
        </tr>
         <tr valign="top">
-            <td class="banner_td"><h7 style=" font-size: 15px ">Find vetted professionals for all your coding needs at CodeTask<br><br><button class="hire_now" type="button" onclick="hireNow()">Hire Now!</button></h7></td>
+            <td class="banner_td">
+                <h7 style=" font-size: 15px ">Find vetted professionals for all your coding needs at CodeTask<br><br>
+                    <button class="hire_now" onclick="hireNow()" type="button">Hire Now!</button>
+                    <button id="create_task" class="hire_now" onclick="createTask()" type="button" style=" margin-left: 10px; background-image: linear-gradient(92.88deg, #ff5914 9.16%, #ff3500 43.89%, #ff4500 64.72%); ">Create Task</button>
+                </h7>
+            </td>
             <td class="banner_td"></td>
         </tr>
     </table>
@@ -189,7 +131,7 @@
     <table style=" margin-top: 15px; margin-left: auto; margin-right: auto; width: 70%; height: 100%; margin-top: 50px; ">
         <tr>
             <td valign="middle">
-                <img class="box_image" src="../static/images/software_development.jpg"/>
+                <img class="box_image" th:src="@{/images/software_development.jpg}" src="../static/images/software_development.jpg"/>
             </td>
             <td valign="middle" style=" padding-left: 20px; padding-top: 30px; padding-bottom: 30px; ">
                 <h5 style=" font-size: 40px; margin-bottom: 10px; margin-top: 5px; ">About us</h5>
@@ -242,7 +184,11 @@
 
 <script>
     function hireNow(){
-        window.location.href = "task_search.html";
+        window.location.href = "tasks";
+    }
+
+    function createTask(){
+        window.location.href = "task_create";
     }
 </script>
 
