--- a/src/main/resources/templates/task_search.html
+++ b/src/main/resources/templates/task_search.html
@@ -1,31 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Search Tasks</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Search For Tasks</title>
 
+    <link rel="stylesheet" th:href="@{/css/application.css}" href="../static/css/application.css"/>
     <style>
-
-        body{
-            font-family: 'Linotype Didot', Serif;
-            background-color: rgb(51, 51, 51);
-        }
-
-        a {
-            color: rgb(255, 255, 255);
-        }
-
-        .icon {
-            margin-left: 7px;
-        }
-
-        #navbar-top {
-            height: 80px;
-            margin: -8px;
-            color: rgb(255, 255, 255);
-            background-color: rgb(255, 69, 0);
-            display: block;
-        }
 
         #search_form {
             position: relative;
@@ -131,6 +111,7 @@
             z-index: 9999;
         }
         .dropdown-check-list ul.items li {
+            margin-bottom: 2px;
             list-style: none;
             z-index: 9999;
         }
@@ -176,53 +157,37 @@
             outline:none;
         }
 
-        #contact_us {
-            color: rgb(255, 255, 255);
-            background-color: rgb(255, 89, 20);
-            height: 300px;
-            margin: 80px -8px 0px -8px;
-            padding-top: 5px;
-        }
-
-        .contact_td {
-            width: 50%;
-            height: 50%;
-        }
-
-        .input {
-            color: rgb(255, 255, 255);
-            background-color: rgb(255, 69, 0);
-            font: inherit;
-            padding: 0.5rem 0.75rem;
-            font-size: 1rem;
-            margin: 0 auto;
-            border-radius: 0.05rem;
-            border: none;
-            width: 90%;
-            display: block;
-            border-bottom: 0.3rem solid transparent;
-            transition: all 0.3s;
-        }
-
-        #contact_button {
-            height: 40px;
-            width: 80px;
-            border-radius: 8px;
-            color: rgb(0, 0, 0);
-            background-color: rgb(0, 206, 209);
-            cursor: pointer;
-            border: none;
-            outline:none;
-        }
-
-        #footer {
-            text-align: center;
-            color: rgb(255, 255, 255);
-            background-color: rgb(255, 69, 0);
-            height: 125px;
-            overflow: hidden;
-            margin: 0px -8px -100px -8px;
+        input[type="checkbox"] {
+            margin-left: 2px;
+            margin-right: 5px;
+            margin-top: -2px;
+            -webkit-appearance: initial;
+            appearance: initial;
+            background: rgb(0,0,0,0.0);
+            width: 1px;
+            height: 25px;
+            border: 2px solid rgb(255, 255, 255);
+            border-radius: 30%;
+            position: relative;
             vertical-align: middle;
+            transform: scale(70%);
+        }
+
+        input[type="checkbox"]:checked {
+            background: rgb(0,0,0,0.2);
+        }
+
+        input[type="checkbox"]:checked:after {
+            content: "✔";
+            color: rgb(255, 255, 255);
+            zoom: 0.75;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            -webkit-transform: translate(-50%,-50%);
+            -moz-transform: translate(-50%,-50%);
+            -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
         }
 
     </style>
@@ -237,7 +202,7 @@
       <a class="icon" href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a>
     </div>
   </div>
-    <a th:href="@{/index}" href="index.html" style=" text-decoration: none; cursor: pointer; "><div style=" text-align: center; margin-top: -75px; "><h2 style=" font-size: 40px; ">CodeTask</h2></div></a>
+    <div style=" text-align: center; margin-top: -75px; "><a th:href="@{/index}" href="index.html" style=" text-decoration: none; cursor: pointer; "><h2 style=" font-size: 40px; ">CodeTask</h2></a></div>
   <div style=" text-align: right;  margin-top: -65px; margin-right: 18px">
         <span style=" font-size: 21px;">
             <a th:href="@{/index}" href="index.html" style=" text-decoration: underline; ">LogIn</a>
@@ -348,7 +313,7 @@
                 <h5 style=" font-size: 40px; margin-bottom: 10px; margin-top: 5px; ">Contact us</h5>
                 <span style=" font-size: 20px; ">Complete the form to get in touch with us. We are here to assist you with any questions or inquiries you may have about our marketplace for freelance services.</span>
             </td>
-            <td class="contact_td" style=" padding-left: 50px; ">
+            <td class="contact_td" style=" padding-left: 50px; padding-top: 25px ">
                 <form>
                     <table style=" display: block; ">
                         <tr>
