--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -102,9 +102,9 @@
     <div style=" text-align: center; margin-top: -75px; "><a th:href="@{/index}" href="index.html" style=" text-decoration: none; cursor: pointer; "><h2 style=" font-size: 40px; ">CodeTask</h2></a></div>
     <div style=" text-align: right;  margin-top: -65px; margin-right: 18px">
         <span style=" font-size: 21px;">
-            <a th:href="@{/index}" href="index.html" style=" text-decoration: underline; ">LogIn</a>
+            <a th:href="@{/users/login}" href="index.html" style=" text-decoration: underline; ">LogIn</a>
             /
-            <a th:href="@{/index}" href="index.html" style=" text-decoration: underline; ">SignUp</a>
+            <a th:href="@{/users/register}" href="index.html" style=" text-decoration: underline; ">SignUp</a>
         </span>
     </div>
 </div>
